--- a/Lab4/CountryApp/app/src/main/res/layout/activity_edit_details.xml
+++ b/Lab4/CountryApp/app/src/main/res/layout/activity_edit_details.xml
@@ -212,5 +212,14 @@
                     android:text="Apply Changes"
                     android:textColor="@color/colorAccent"
                     android:layout_marginTop="16dp"/>
-            </LinearLayout>
+
+        <Button
+            android:id="@+id/btnEditBack"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="Back" />
+    </LinearLayout>
         </android.support.constraint.ConstraintLayout>
